--- a/appspec.yml
+++ b/appspec.yml
@@ -6,6 +6,7 @@ files:
 hooks:
   ApplicationStop:
     - location: deregister_from_elb.sh
+      runas: root
   ApplicationStart:
     - location: register_with_elb.sh
     - location: after_install_script.sh
