--- a/appspec.yml
+++ b/appspec.yml
@@ -5,9 +5,9 @@ files:
     destination: /var/www/port81
 hooks:
   ApplicationStop:
-    - location: deregister_from_elb.sh
-      runas: root
+   # - location: deregister_from_elb.sh
+    #  runas: root
   ApplicationStart:
     - location: after_install_script.sh
-    - location: register_with_elb.sh
+   #- location: register_with_elb.sh
       runas: root
