--- a/appspec.yml
+++ b/appspec.yml
@@ -2,7 +2,7 @@ version: 0.0
 os: linux
 files:
   - source: /
-    destination: /usr/share/nginx/html/nodejs
+    destination: /usr/nodejs
 hooks:
   ApplicationStart:
     - location: after_install_script.sh
